edited GDP Forulas JS

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                                 type = "number"
                                 class = "income"> +
                                 Profit (P)
-                                (<input id="profit" 
+                                <input id="profit" 
                                 value="0" 
                                 type = "number"
                                 class = "income">
