Editing into page

--- a/index.html
+++ b/index.html
@@ -7,9 +7,20 @@
     <body>
         <main>
             <!--INTRO PAGE-->
-            <section id="page1">
-                <h1>AP MACRO Equations Calculator</h1>
+            <section id="intro-page">
+                <nav>
+                <h1 id = "intro-name">AP MACRO Equations Calculator</h1>
+                </nav>
+
+                <section id = "intro">
+                    <div id="page1">
+                        <img src="./images/macro.jpeg" alt="Macro">
+                        <h1 class="headline">All your AP Macro Equations in one place</h1>
+                    </div>
+                </section>
             </section>
+
+            <div class="background"></div>
 
             <!--GDP FORMULAS-->
             <section id = page2>
@@ -296,6 +307,7 @@
             </section>
             
         </main>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.5.1/gsap.min.js"></script>
     <script src="./scripts.js"></script>
     </body>
 </html>
