--- a/index.html
+++ b/index.html
@@ -305,15 +305,8 @@
                 </section>
             </section>
             
-            <footer id = "contact">
-                <h3>By: Sreenvitha Chikati</h3>
-                <section id="image2">
-                    <a href="">
-                        <img src="" 
-                        width = 100% height = 100%
-                        alt="GitHub"> 
-                    </a>
-                </section>
+            <footer>
+                <h3 id = "my-name">By: Sreenvitha Chikati</h3>
             </footer>
         </main>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.5.1/gsap.min.js"></script>
